tests/parse_print/random_perturb/set01/delete-07/stderr.expected
Conjure is exiting due to user errors.
Error:
    tests/parse_print/random_perturb/set01/delete-07/delete-07.essence line 3, column 10:
unexpected (
expecting branching on, comma, end of input, find statement, given statement, letting statement, objective, rest of find statement, such that statement, or where statement
    line 3, column 10
    find x : et (size 2) of int(1..3)
          ^^^^^^^